--- a/Projects/admin/style.css
+++ b/Projects/admin/style.css
@@ -19,6 +19,37 @@ body {
     box-shadow: 3px 3px 8px #212529
 }
 
+@media (min-width: 300px) and (max-width:767px) {
+    .container {
+        width: 300px;
+    }
+
+    .container span {
+        font-size: 11px;
+    }
+
+    h1,
+    h2,
+    h3 {
+        font-size: 17px;
+    }
+
+    th {
+        font-size: 12px;
+    }
+
+    td {
+        font-size: 12px;
+    }
+
+    .xd-content {
+        margin-top: 200px;
+        background: rgb(115, 108, 108);
+        max-width: 250px;
+    }
+
+}
+
 .form {
     margin-bottom: 50px;
     padding: 15px;
@@ -53,12 +84,14 @@ label {
 
 /*Table switch section*/
 
-
-
 #kapcsoloTabla {
     box-shadow: 3px 3px 8px #212529;
-    height: 350px;
+    height: 450px;
     padding: 15px;
+}
+
+#kapcsoloTabla p {
+    margin-top: 20p;
 }
 
 /*Table design*/
