--- a/Projects/MYownResume/style.css
+++ b/Projects/MYownResume/style.css
@@ -19,6 +19,7 @@
     height: 100%;
     left: 0;
     top: 0;
+
 }
 
 .container {
@@ -257,7 +258,7 @@ li .info p {
 
 @media (min-width: 375px) and (max-width: 420px) {
     #background {
-       height: 100%;
+        height: 100%;
     }
 
     .resume {
@@ -271,6 +272,7 @@ li .info p {
         margin-right: 350px;
     }
 }
+
 @media (min-width: 421px) and (max-width: 549px) {
     #background {
         width: 100%;
@@ -293,11 +295,21 @@ li .info p {
         scale: 0.6;
         transform: translateY(-35%)translateX(-20%);
     }
+
+    .fa-mobile-alt,
+    span {
+        margin-right: 350px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     .resume {
         scale: 0.8;
         transform: translateY(-5%)translateX(0%);
+    }
+
+    .fa-mobile-alt,
+    span {
+        margin-right: 350px;
     }
 }
