--- a/Projects/MYownResume/style.css
+++ b/Projects/MYownResume/style.css
@@ -256,6 +256,7 @@ li .info p {
     margin-top: 10px;
 }
 
+
 @media (min-width: 375px) and (max-width: 420px) {
     #background {
         height: 100%;
@@ -266,11 +267,21 @@ li .info p {
         scale: 0.45;
         transform: translateY(-60%)translateX(-55%);
     }
-
-    .fa-mobile-alt,
-    span {
-        margin-right: 350px;
+    .map-marker{
+        position: relative;
+        left: 0px; 
+        top: 14px;
+        transform: scale(1.3);
     }
+    .currentCity{
+        margin-left: 27px;
+    }
+    .envelope {
+        width: 150%;
+        padding-top: 15px;
+        padding-bottom: 15px ;
+    }
+      
 }
 
 @media (min-width: 421px) and (max-width: 549px) {
@@ -284,10 +295,21 @@ li .info p {
         transform: translateY(-50%)translateX(-25%);
     }
 
-    .fa-mobile-alt,
-    span {
-        margin-right: 350px;
+    .map-marker{
+        position: relative;
+        left: 0px; 
+        top: 14px;
+        transform: scale(1.4);
     }
+    .currentCity{
+        margin-left: 27px;
+    }
+    .envelope {
+        width: 150%;
+        padding-top: 15px;
+        padding-bottom: 15px ;
+    }
+  
 }
 
 @media screen and (min-width: 550px) and (max-width: 767px) {
@@ -295,11 +317,12 @@ li .info p {
         scale: 0.6;
         transform: translateY(-35%)translateX(-20%);
     }
-
-    .fa-mobile-alt,
-    span {
-        margin-right: 350px;
+    .envelope {
+        width: 150%;
+        padding-top: 15px;
+        padding-bottom: 15px ;
     }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
@@ -308,8 +331,9 @@ li .info p {
         transform: translateY(-5%)translateX(0%);
     }
 
-    .fa-mobile-alt,
-    span {
-        margin-right: 200px;
+    .envelope {
+        width: 150%;
+        padding-top: 15px;
+        padding-bottom: 15px ;
     }
 }
