--- a/Projects/MYownResume/style.css
+++ b/Projects/MYownResume/style.css
@@ -397,9 +397,9 @@ li .info p {
 }
 
 button {
-    margin: 10px;
+    margin-top: 100px;
     padding: 8px;
-    background-image: linear-gradient(175deg, rgb(16, 23, 42), rgb(27, 37, 65), rgb(16, 23, 42));
+    background-image: linear-gradient(175deg, rgb(39, 85, 10), rgb(6, 131, 72), rgb(7, 103, 36));
     box-shadow: 2px 2px 5px;
     border-radius: 10px;
     font-size: 13px;
@@ -409,6 +409,6 @@ button {
 
 button:hover {
     transform: scale(1.1);
-    background-image: linear-gradient(175deg, rgb(160, 167, 185), rgb(87, 98, 127), rgb(36, 57, 113));
+    background-image: linear-gradient(175deg, rgb(214, 232, 16), rgb(153, 233, 14), rgb(130, 248, 13));
     cursor: pointer;
 }
