--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ body {
     object-fit: cover;
     border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
     box-shadow: 8px 5px 20px rgb(71, 78, 131);
+    padding: 5px;
 }
 
 @media screen and (min-width: 375px) and (max-width: 549px) {
@@ -181,6 +182,7 @@ body {
     .aboutMePicture {
         width: 250px;
         height: 250px;
+       
     }
 
     .right-side-header {
